--- a/package.json
+++ b/package.json
@@ -16,12 +16,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/react-router-dom": "^5.3.3",
     "antd": "^5.27.1",
+    "dayjs": "^1.11.13",
     "i18next": "^25.4.2",
     "i18next-browser-languagedetector": "^8.2.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "react-i18next": "^15.7.2"
+    "react-i18next": "^15.7.2",
+    "react-router-dom": "^7.8.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
