--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.2.1",
     "@types/react-router-dom": "^5.3.3",
     "antd": "^5.27.1",
     "dayjs": "^1.11.13",
@@ -23,8 +24,10 @@
     "i18next-browser-languagedetector": "^8.2.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-hook-form": "^7.62.0",
     "react-i18next": "^15.7.2",
-    "react-router-dom": "^7.8.2"
+    "react-router-dom": "^7.8.2",
+    "zod": "^4.1.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
