--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@hookform/resolvers": "^5.2.1",
     "@types/react-router-dom": "^5.3.3",
     "antd": "^5.27.1",
+    "axios": "^1.11.0",
     "dayjs": "^1.11.13",
     "i18next": "^25.4.2",
     "i18next-browser-languagedetector": "^8.2.0",
